# rust-ordered-float

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: tests.yaml
src/: lib.rs
tests/: evil.rs  test.rs  test_deprecated_names.rs
