[package]
name = "ordered-float"
version = "1.1.1"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>", "Matt Brubeck <mbrubeck@limpet.net>"]
license = "MIT"
description = "Wrappers for total ordering on floats"
repository = "https://github.com/reem/rust-ordered-float"
readme = "README.md"
keywords = ["no_std", "ord", "f64", "f32", "sort"]
categories = ["science", "rust-patterns", "no-std"]

[dependencies]
num-traits = { version = "0.2.1", default-features = false }
serde = { version = "1.0", optional = true, default-features = false }

[dev-dependencies]
serde_test = "1.0"

[features]
default = ["std"]
std = ["num-traits/std"]
