[package]
name        = "ordered-float"
version     = "3.9.2"
authors     = [
  "Jonathan Reem <jonathan.reem@gmail.com>",
  "Matt Brubeck <mbrubeck@limpet.net>",
]
license     = "MIT"
description = "Wrappers for total ordering on floats"
repository  = "https://github.com/reem/rust-ordered-float"
readme      = "README.md"
keywords    = ["no_std", "ord", "f64", "f32", "sort"]
categories  = ["science", "rust-patterns", "no-std"]
edition     = "2021"

[dependencies]
num-traits = { version = "0.2.1", default-features = false }
serde      = { version = "1.0", optional = true, default-features = false }
rkyv       = { version = "0.7.41", optional = true, default-features = false, features = ["rend"] }
schemars   = { version = "0.8.8", optional = true }
rand       = { version = "0.8.3", optional = true, default-features = false }
arbitrary  = { version = "1.0.0", optional = true }
proptest   = { version = "1.0.0", optional = true }
speedy     = { version = "0.8.3", optional = true, default-features = false }
bytemuck   = { version = "1.12.2", optional = true, default-features = false }

[dev-dependencies]
serde_test = "1.0"

[features]
default  = ["std"]
std      = ["num-traits/std"]
serde    = ["dep:serde", "rand?/serde1"]
randtest = ["rand/std", "rand/std_rng"]
rkyv     = ["rkyv_32"]
rkyv_16  = ["dep:rkyv", "rkyv?/size_16"]
rkyv_32  = ["dep:rkyv", "rkyv?/size_32"]
rkyv_64  = ["dep:rkyv", "rkyv?/size_64"]
rkyv_ck  = ["rkyv?/validation"]
